Homework 2: add JDBC + Liquibase + integration tests