@@ -1,12 +1,17 @@
+package com.marketplace.service;
+
 import com.marketplace.model.Product;
 import com.marketplace.model.User;
 import com.marketplace.out.repository.ProductRepository;
-import com.marketplace.service.*;
 import com.marketplace.validation.ProductValidator;
+import org.assertj.core.api.ThrowableAssert;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
-import java.util.*;
+import java.time.Instant;
+import java.util.Collections;
+import java.util.List;
+import java.util.Optional;
 
 import static org.assertj.core.api.Assertions.*;
 import static org.mockito.Mockito.*;
@@ -21,8 +26,9 @@ class ProductServiceTest {
 
     private ProductService productService;
 
-    private final Product sampleProduct = new Product(1, "Laptop", "Dell", "Electronics", 1200.0);
-    private final User testUser = new User(2, "admin1", "pass", User.Role.ADMIN);
+    private final User testUser = new User(2L, "admin1", "pass", User.Role.ADMIN);
+    private final Product sampleProduct =
+            new Product(1L, "Laptop", "Dell", "Electronics", 1200.0, Instant.now(), Instant.now());
 
     @BeforeEach
     void setUp() {
@@ -39,42 +45,44 @@ class ProductServiceTest {
         productService = new ProductService(productRepository, auditService, authService, metricsService, validator);
     }
 
-    // Успешные сценарии
     @Test
     void save_shouldSaveNewProduct_whenValidAndAdmin() {
-        when(productRepository.findById(sampleProduct.getId())).thenReturn(Optional.empty());
-        when(productRepository.save(sampleProduct)).thenReturn(sampleProduct);
+        Product newProduct = new Product("Laptop", "Dell", "Electronics", 1200.0);
+
+        when(productRepository.save(newProduct)).thenReturn(sampleProduct);
         when(productRepository.count()).thenReturn(1L);
 
-        Product result = productService.save(sampleProduct);
+        Product result = productService.save(newProduct);
 
         assertThat(result).isEqualTo(sampleProduct);
-        verify(validator).validate(eq(sampleProduct), eq(testUser.getId()));
-        verify(productRepository).save(sampleProduct);
+
+        verify(validator).validate(eq(newProduct), eq(testUser.getId()));
+        verify(productRepository).save(newProduct);
         verify(auditService).logInfo(eq(testUser.getId()), eq("ADD_PRODUCT"), contains("Laptop"));
         verify(metricsService).increment("product.added");
-        verify(metricsService).setGauge(eq("product.count"), eq(1L));
+        verify(metricsService).setGauge("product.count", 1L);
     }
 
     @Test
     void update_shouldUpdateExistingProduct_whenValidAndAdmin() {
+        when(productRepository.existsById(sampleProduct.getId())).thenReturn(true);
+        when(productRepository.update(sampleProduct)).thenReturn(true);
         when(productRepository.findById(sampleProduct.getId())).thenReturn(Optional.of(sampleProduct));
-        when(productRepository.save(sampleProduct)).thenReturn(sampleProduct);
         when(productRepository.count()).thenReturn(1L);
 
         Product result = productService.update(sampleProduct);
 
         assertThat(result).isEqualTo(sampleProduct);
+
         verify(validator).validate(eq(sampleProduct), eq(testUser.getId()));
-        verify(productRepository).save(sampleProduct);
+        verify(productRepository).update(sampleProduct);
         verify(auditService).logInfo(eq(testUser.getId()), eq("UPDATE_PRODUCT"), contains("Laptop"));
         verify(metricsService).increment("product.updated");
+        verify(metricsService).setGauge("product.count", 1L);
     }
 
     @Test
     void deleteById_shouldDeleteProduct_whenAdminAndExists() {
-        when(authService.isAdmin()).thenReturn(true);
-        when(authService.getCurrentUser()).thenReturn(testUser);
         when(productRepository.deleteById(1L)).thenReturn(true);
         when(productRepository.count()).thenReturn(0L);
 
@@ -84,34 +92,31 @@ class ProductServiceTest {
 
         verify(auditService).logInfo(eq(testUser.getId()), eq("DELETE_PRODUCT"), contains("1"));
         verify(metricsService).increment("product.deleted");
-        verify(metricsService).setGauge(eq("product.count"), eq(0L));
+        verify(metricsService).setGauge("product.count", 0L);
     }
-
-
-
 
     @Test
     void findByBrand_shouldReturnFilteredProducts() {
-        List<Product> dellProducts = List.of(sampleProduct);
-        when(productRepository.findByBrand("Dell")).thenReturn(dellProducts);
+        when(productRepository.findByBrand("Dell"))
+                .thenReturn(Collections.singletonList(sampleProduct));
 
         List<Product> result = productService.findByBrand("Dell");
 
-        assertThat(result).hasSize(1).containsExactly(sampleProduct);
-        verify(productRepository).findByBrand("Dell");
+        assertThat(result).containsExactly(sampleProduct);
+
         verify(auditService).logInfo(any(), eq("FILTER_PRODUCTS"), contains("Dell"));
         verify(metricsService).stopTimer(eq("findByBrand"), anyLong());
     }
 
     @Test
     void findByCategory_shouldReturnFilteredProducts() {
-        List<Product> electronics = List.of(sampleProduct);
-        when(productRepository.findByCategory("Electronics")).thenReturn(electronics);
+        when(productRepository.findByCategory("Electronics"))
+                .thenReturn(Collections.singletonList(sampleProduct));
 
         List<Product> result = productService.findByCategory("Electronics");
 
-        assertThat(result).hasSize(1).containsExactly(sampleProduct);
-        verify(productRepository).findByCategory("Electronics");
+        assertThat(result).containsExactly(sampleProduct);
+
         verify(auditService).logInfo(any(), eq("FILTER_PRODUCTS"), contains("Electronics"));
         verify(metricsService).stopTimer(eq("findByCategory"), anyLong());
     }
@@ -123,50 +128,42 @@ class ProductServiceTest {
         long total = productService.count();
 
         assertThat(total).isEqualTo(5L);
+
         verify(metricsService).setGauge("product.count", 5L);
     }
 
-    // Неуспешные сценарии
-
     @Test
-    void save_shouldThrowSecurityException_whenUserIsNotAdmin() {
+    void save_shouldThrowException_whenNotAdmin() {
         when(authService.isAdmin()).thenReturn(false);
 
-        assertThatThrownBy(() -> productService.save(sampleProduct))
-                .isInstanceOf(SecurityException.class)
-                .hasMessageContaining("Доступ запрещен");
+        Throwable thrown = catchThrowable(new ThrowableAssert.ThrowingCallable() {
+            @Override
+            public void call() throws Throwable {
+                productService.save(new Product("Laptop", "Dell", "Electronics", 1200.0));
+            }
+        });
 
-        verify(auditService).logError(eq(testUser.getId()), eq("ACCESS_DENIED"), contains("Admin role required"));
+        assertThat(thrown).isInstanceOf(SecurityException.class);
+
+        verify(auditService).logError(eq(testUser.getId()), eq("ACCESS_DENIED"), anyString());
     }
 
     @Test
-    void save_shouldThrowIllegalArgumentException_whenProductAlreadyExists() {
-        when(productRepository.findById(sampleProduct.getId())).thenReturn(Optional.of(sampleProduct));
+    void update_shouldThrowException_whenProductNotFound() {
+        when(productRepository.existsById(999L)).thenReturn(false);
 
-        assertThatThrownBy(() -> productService.save(sampleProduct))
-                .isInstanceOf(IllegalArgumentException.class)
-                .hasMessageContaining("уже существует");
+        final Product p = new Product(
+                999L, "Phone", "Samsung", "Electronics", 900.0, Instant.now(), Instant.now()
+        );
 
-        verify(auditService).logError(eq(testUser.getId()), eq("DUPLICATE_PRODUCT_ID"), contains("already exists"));
-    }
+        Throwable thrown = catchThrowable(new ThrowableAssert.ThrowingCallable() {
+            @Override
+            public void call() throws Throwable {
+                productService.update(p);
+            }
+        });
 
-    @Test
-    void save_shouldThrowIllegalArgumentException_whenValidationFails() {
-        doThrow(new IllegalArgumentException("Invalid data"))
-                .when(validator).validate(eq(sampleProduct), eq(testUser.getId()));
-
-        when(productRepository.findById(sampleProduct.getId())).thenReturn(Optional.empty());
-
-        assertThatThrownBy(() -> productService.save(sampleProduct))
-                .isInstanceOf(IllegalArgumentException.class)
-                .hasMessageContaining("Invalid data");
-    }
-
-    @Test
-    void update_shouldThrowIllegalArgumentException_whenProductNotFound() {
-        when(productRepository.findById(sampleProduct.getId())).thenReturn(Optional.empty());
-
-        assertThatThrownBy(() -> productService.update(sampleProduct))
+        assertThat(thrown)
                 .isInstanceOf(IllegalArgumentException.class)
                 .hasMessageContaining("не найден");
 
@@ -175,7 +172,15 @@ class ProductServiceTest {
 
     @Test
     void findByPriceRange_shouldThrowException_whenMinGreaterThanMax() {
-        assertThatThrownBy(() -> productService.findByPriceRange(2000.0, 1000.0))
+
+        Throwable thrown = catchThrowable(new ThrowableAssert.ThrowingCallable() {
+            @Override
+            public void call() throws Throwable {
+                productService.findByPriceRange(2000, 1000);
+            }
+        });
+
+        assertThat(thrown)
                 .isInstanceOf(IllegalArgumentException.class)
                 .hasMessageContaining("Минимальная цена не может быть больше");
 
